--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "med_blog",
+  "version": "1.0.0",
+  "description": "A personal blog platform for medical or health-related content",
+  "main": "./dist/index.js",
+  "scripts": {
+    "start": "ts-node index.js",
+    "dev": "nodemon index.js",
+    "build": "tsc",
+    "test": "jest"
+  },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -11,6 +22,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -18,7 +30,11 @@
     "@types/morgan": "^1.9.9",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.21",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "ts-jest": "^29.0.5",
+    "typescript": "^5.0.4"
   }
 }
