--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A personal blog platform for medical or health-related content",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "ts-node index.js",
+    "start": "nodemon index.ts",
     "dev": "nodemon index.js",
     "build": "tsc",
     "test": "jest"
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.2",
+    "pg": "^8.12.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/pg": "^8.11.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "jest": "^29.3.1",
@@ -35,6 +37,6 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.0.5",
-    "typescript": "^5.0.4"
+    "typescript": "^5.5.3"
   }
 }
